--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 * {
   margin: 0;
   padding: 0;
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  font-style: italic;
 }
 body {
   text-align: center;
